<package>
  <name>uwb_msgs</name>
  <version>0.0.1</version>
  <description> ROS messages for UWB ranging</description>
  <maintainer email="roland.jung@aau.at">Roland Jung</maintainer>
  <license>BSD</license>

  <url type="website">https://gitlab.aau.at/aau-cns/ros_pkgs/uwb_msgs</url>
  <url type="repository">https://gitlab.aau.at/aau-cns/ros_pkgs/uwb_msgs</url>
  <url type="bugtracker">https://gitlab.aau.at/aau-cns/ros_pkgs/uwb_msgs/issues</url>
  <author email="roland.jung@aau.at">Roland Jung</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
